--- a/SherpaDesk/MainPage.xaml
+++ b/SherpaDesk/MainPage.xaml
@@ -20,6 +20,9 @@
         <StackPanel Grid.Row="0" Grid.ColumnSpan="3" Canvas.ZIndex="1000" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center">
             <ProgressRing Name="progressRing" HorizontalAlignment="Left" Foreground="#FFACFF9F" Margin="0,0,0,0" Height="200" Width="200" />
         </StackPanel>
+        <StackPanel x:Name="FullscreenPanel" Grid.Row="0" Visibility="Collapsed" Grid.ColumnSpan="3" Canvas.ZIndex="10" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Tapped="FullscreenPanel_Tapped" Background="Black">
+            <Image x:Name="ImageFull" Stretch="None" Grid.ColumnSpan="3" Margin="5,5,5,5" Grid.RowSpan="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Canvas.ZIndex="10" />
+        </StackPanel>
         <Image HorizontalAlignment="Left" Height="152" Margin="15,5,0,0" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Top" Width="512" Source="Assets/StoreLogo.png" />
         <Frame x:Name="MainFrame" HorizontalAlignment="Stretch" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" VerticalAlignment="Top" />
         <HyperlinkButton Content="http://app.sherpadesk.com" NavigateUri="http://app.sherpadesk.com" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="right" Margin="0,0,50,0" VerticalAlignment="Top" Foreground="White"/>
