--- a/SherpaDesk/MainPage.xaml
+++ b/SherpaDesk/MainPage.xaml
@@ -35,7 +35,7 @@
             <Button x:Name="LoginNameButton" Grid.Column="1" Content="" Margin="0,0,0,0" FontSize="20" VerticalAlignment="Top" RenderTransformOrigin="0,0" Foreground="White" Background="#FF004174" BorderBrush="#FF004174" FontWeight="Normal">
                 <Button.Flyout>
                     <MenuFlyout>
-                        <MenuFlyoutItem x:Name="MyProfileMenu" Text="My Profile" Click="MyProfileMenu_Click" />
+                        <MenuFlyoutItem x:Name="MyProfileMenu" Text="My Profile" Click="MyProfileMenu_Click" Visibility="Collapsed" />
                         <MenuFlyoutItem x:Name="LogOutMenu" Text="Log Out" Click="LogOutMenu_Click" />
                     </MenuFlyout>
                 </Button.Flyout>
