--- a/SherpaDesk/MainPage.xaml
+++ b/SherpaDesk/MainPage.xaml
@@ -25,6 +25,7 @@
         </StackPanel>
         <Image HorizontalAlignment="Left" Height="152" Margin="15,5,0,0" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Top" Width="512" Source="Assets/StoreLogo.png" />
         <Frame x:Name="MainFrame" HorizontalAlignment="Stretch" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" VerticalAlignment="Top" />
+        <TextBlock Name="BuildNumber"></TextBlock>
         <HyperlinkButton Content="http://app.sherpadesk.com" NavigateUri="http://app.sherpadesk.com" Grid.Row="0" Grid.Column="0"  HorizontalAlignment="right" Margin="0,0,50,0" VerticalAlignment="Top" Foreground="White"/>
         <Grid Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="right" Margin="0,0,0,0">
             <Grid.ColumnDefinitions>
