--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -36,7 +36,7 @@
             </Grid.ColumnDefinitions>
             <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Add Time" FontWeight="Normal"/>
         </Grid>
-        <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent" Margin="0,1,0,-1">
+        <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent" Margin="0,1,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="60"/>
                 <RowDefinition Height="60"/>
@@ -54,8 +54,9 @@
                 <ColumnDefinition Width="20"/>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="20"/>
+                <ColumnDefinition Width="150"/>
                 <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="20"/>
+                <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,0,0,0" TextWrapping="Wrap" Text="Log My Time" VerticalAlignment="Top" FontSize="40"/>
@@ -83,26 +84,23 @@
             </ComboBox>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="1" Grid.Column="4" Margin="0,25,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="30"/>
-            <ComboBox Name="TaskTypeList" Grid.Column="4" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+            <ComboBox Name="TaskTypeList" Grid.Column="4" Grid.Row="2" Grid.ColumnSpan="3" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
             </ComboBox>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="3" Grid.Column="0" Margin="10,25,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="30"/>
             <TextBox Name="NoteTextBox" AcceptsReturn="True" Margin="10,0,0,0" Grid.RowSpan="3" HorizontalAlignment="Center" Height="300" Grid.Row="4" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Top" FontSize="24" Width="400" />
-            <CheckBox Name="BillableBox" Content="Billable" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="7" VerticalAlignment="Top" FontSize="20" IsChecked="True"/>
 
-            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Column="2" Grid.ColumnSpan="4" Grid.RowSpan="3" Grid.Row="4" Background="#FF6B3B28" Margin="1,0,19,0">
+            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Column="2" Grid.ColumnSpan="3" Grid.RowSpan="3" Grid.Row="4" Background="#FF6B3B28" Margin="1,0,0,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="60"/>
-                    <RowDefinition Height="120"/>
+                    <RowDefinition Height="60"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="10"/>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="10"/>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="auto"/>
@@ -131,11 +129,15 @@
                     <TextBlock x:Name="EndTimeLabel" Grid.Column="0" FontSize="40" VerticalAlignment="Top" Margin="0,5,0,0" />
                     <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Column="2" Height="50" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" />
                 </Grid>
-                <TextBox x:Name="HoursTextBox" Margin="0,3,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
+                <TextBox x:Name="HoursTextBox" Margin="0,3,30,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
                 <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="9" Margin="0,25,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="30"/>
                 <TextBlock x:Name="ErrorHours" Grid.Column="9" HorizontalAlignment="Left" Margin="0 -50 0 0" Grid.Row="1" Height="50" VerticalAlignment="Top"/>
             </Grid>
-            <Button Content="Save My Time" Grid.Column="2" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" Width="400" FontSize="36" Background="#FF2F9129" Click="Button_Click"/>
+
+            <CheckBox Name="BillableBox" Content="Billable" HorizontalAlignment="Left" Margin="20,0,0,0" Grid.Row="5" Grid.Column="6" VerticalAlignment="Center" FontSize="20" IsChecked="True"/>
+
+
+            <Button Content="Save My Time" Margin="7,25,0,0" Grid.Column="0" HorizontalAlignment="Left" Grid.Row="7" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" Width="400" FontSize="36" Background="#FF2F9129" Click="Button_Click"/>
         </Grid>
         <VisualStateManager.VisualStateGroups>
 
